<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SensorTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Enter a message.</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My message</string>
	<string name="sensor_data_a">Sensor data A</string>
	<string name="sensor_data_g">Sensor data G</string>
	<string name="sensor_time">Sensor time</string>
    
</resources>
